@@ -1,5 +1,11 @@
 2008-09-02  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>
 
+	* pycvsanaly2/extensions/Metrics.py:
+
+	Do not trust external tools output.
+	
+2008-09-02  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>
+
 	* pycvsanaly2/utils.py:
 
 	Fix the query in get_path_for_revision() again to make it work
